[package]
name = "hack"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.13.0"
sysinfo = "0.30.12"
winit = "0.30.0"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
